[package]
name = "rmcp-server-builder"
version = "0.1.7"
edition = "2024"
description = "Composable MCP server builder for zero-boilerplate capability composition"
license = "MIT"
repository = "https://gitlab.com/lx-industries/rmcp-server-builder"
keywords = ["mcp", "rmcp", "modelcontextprotocol", "server", "builder"]
categories = ["development-tools"]

[dependencies]
rmcp = { version = "0.14", features = ["server"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
